--- a/static/src/index.html
+++ b/static/src/index.html
@@ -3,14 +3,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <meta property="title" content="!airhorn" />
-  <meta property="url" content="https://airhorn.solutions" />
-  <meta property="url" content="https://airhornbot.com" />
+  <meta property="url" content="https://airhorn.shywim.fr" />
+  <meta property="url" content="https://airhorn.shywim.fr" />
   <meta property="description" content="A Discord bot with live statistics that makes airhorn sounds BEEP BOOP." />
   <meta property="site_name" content="Airhorn Solutions" />
   <meta property="locale" content="en_US" />
 
   <meta property="og:type" content="article" />
-  <meta property="og:url" content="https://airhorn.solutions" />
+  <meta property="og:url" content="https://airhorn.shywim.fr" />
   <meta property="og:title" content="!airhorn" />
   <meta property="og:description" content="A Discord bot with live statistics that makes airhorn sounds BEEP BOOP." />
 
