fix guilds count class

--- a/web-app/public/index.html
+++ b/web-app/public/index.html
@@ -44,7 +44,7 @@
       <div class="stats-row">
         <img src="assets/icon-servers.svg">
         <div class="label-value">
-          <div id="servers-count" class="value">0</div>
+          <div id="guilds-count" class="value">0</div>
           <div class="label">Unique Servers</div>
         </div>
       </div>
