disable manage link for now

--- a/web-app/public/index.html
+++ b/web-app/public/index.html
@@ -23,7 +23,7 @@
       </video>
 
       <a class="add-btn" href="/login">Add to Discord</a>
-      <a class="add-btn" href="/manage" disabled>Manage my Airhorn</a>
+      <a class="add-btn disabled" href="/manage" disabled>Manage my Airhorn</a>
     </div>
 
     <div id="stats-panel" class="stats-panel crossfade one-reverse">
