--- a/web-app/public/index.html
+++ b/web-app/public/index.html
@@ -86,8 +86,8 @@
       </div>
 
       <div class="social">
-        <a><img src="assets/icon-facebook.svg"></a>
-        <a><img src="assets/icon-twitter.svg"></a>
+        <a id="share-fb"><img src="assets/icon-facebook.svg"></a>
+        <a id="share-twitter"><img src="assets/icon-twitter.svg"></a>
       </div>
 
     </div>
