added poster to video for mobiles

--- a/web-app/public/index.html
+++ b/web-app/public/index.html
@@ -15,7 +15,7 @@
         <p class="message">The only bot for Discord you'll ever need</p>
       </div>
 
-      <video id="video" class="video-airhorn" preload="true">
+      <video id="video" class="video-airhorn" poster="assets/thumbnail.jpg" preload="true">
         <source src="assets/final_island_full.mp4" type="video/mp4">
         <source src="assets/final_island_full.ogv" type="video/ogg; codecs=theora, vorbis">
         <source src="assets/final_island_full.webm" type="video/webm; codecs=vp8, vorbis">
