--- a/web-app/public/index.html
+++ b/web-app/public/index.html
@@ -2,8 +2,28 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <meta property="title" content="!airhorn" />
+  <meta property="url" content="https://airhorn.shywim.fr" />
+  <meta property="description" content="A Discord bot with live statistics that makes airhorn sounds BEEP BOOP." />
+  <meta property="site_name" content="Airhorn" />
+  <meta property="locale" content="en_US" />
+
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://airhorn.shywim.fr" />
+  <meta property="og:title" content="!airhorn" />
+  <meta property="og:description" content="A Discord bot with live statistics that makes airhorn sounds BEEP BOOP." />
+  <meta property="og:image" content="assets/og-facebook.png" />
+
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@shywim" />
+  <meta name="twitter:title" content="!airhorn" />
+  <meta name="twitter:description" content="BEEP BOOP. Airhorn bot makes airhorn noises in Discord. BEEP BOOP." />
+  <meta property="twitter:image" content="assets/og-twitter.png" />
+  
   <title>!airhorn</title>
 
+  <link rel="icon" href="assets/favicon.png" />
   <link rel="stylesheet" href="css/main.css">
 </head>
 
