--- a/web-app/public/index.html
+++ b/web-app/public/index.html
@@ -20,7 +20,7 @@
   <meta name="twitter:title" content="!airhorn" />
   <meta name="twitter:description" content="BEEP BOOP. Airhorn bot makes airhorn noises in Discord. BEEP BOOP." />
   <meta property="twitter:image" content="assets/og-twitter.png" />
-  
+
   <title>!airhorn</title>
 
   <link rel="icon" href="assets/favicon.png" />
@@ -46,70 +46,71 @@
       <a class="add-btn disabled" href="/manage" disabled>Manage my Airhorn</a>
     </div>
 
-    <div id="stats-panel" class="stats-panel crossfade one-reverse">
-      <div class="stats-row">
-        <img src="assets/icon-plays.svg">
-        <div class="label-value">
-          <div id="plays-count" class="value">0</div>
-          <div class="label">Plays</div>
-        </div>
-      </div>
-      <div class="stats-row">
-        <img src="assets/icon-users.svg">
-        <div class="label-value">
-          <div id="users-count" class="value">0</div>
-          <div class="label">Unique Users</div>
-        </div>
-      </div>
-      <div class="stats-row">
-        <img src="assets/icon-servers.svg">
-        <div class="label-value">
-          <div id="guilds-count" class="value">0</div>
-          <div class="label">Unique Servers</div>
-        </div>
-      </div>
-      <div class="stats-row">
-        <img src="assets/icon-channels.svg">
-        <div class="label-value">
-          <div id="channels-count" class="value">0</div>
-          <div class="label">Unique channels</div>
-        </div>
-      </div>
-    </div>
-
     <div class="footer">
-      <div class="airhorn-count">
-        <div id="stats-toggler" class="stats-toggler">
-          <div class="airhorn-count-content">
-            <img src="assets/airhorn-counter.svg">
-            <div class="count-text">
-              <div class="count" id="count">0</div>
-              <div class="and-counting">and counting</div>
+      <div id="stats-panel" class="stats-panel crossfade one-reverse">
+        <div class="stats-row">
+          <img src="assets/icon-plays.svg">
+          <div class="label-value">
+            <div id="plays-count" class="value">0</div>
+            <div class="label">Plays</div>
+          </div>
+        </div>
+        <div class="stats-row">
+          <img src="assets/icon-users.svg">
+          <div class="label-value">
+            <div id="users-count" class="value">0</div>
+            <div class="label">Unique Users</div>
+          </div>
+        </div>
+        <div class="stats-row">
+          <img src="assets/icon-servers.svg">
+          <div class="label-value">
+            <div id="guilds-count" class="value">0</div>
+            <div class="label">Unique Servers</div>
+          </div>
+        </div>
+        <div class="stats-row">
+          <img src="assets/icon-channels.svg">
+          <div class="label-value">
+            <div id="channels-count" class="value">0</div>
+            <div class="label">Unique channels</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-content">
+        <div class="airhorn-count">
+          <div id="stats-toggler" class="stats-toggler">
+            <div class="airhorn-count-content">
+              <img src="assets/airhorn-counter.svg">
+              <div class="count-text">
+                <div class="count" id="count">0</div>
+                <div class="and-counting">and counting</div>
+              </div>
+            </div>
+            <div class="stats-btn">
+              <img id="stats-panel-close" class="crossfade three-reverse" src="assets/icon-close.svg">
+              <img id="stats-panel-open" class="crossfade two-reverse" src="assets/icon-about.svg" tip="Click for more stats" currentitem="false">
             </div>
           </div>
-          <div class="stats-btn">
-            <img id="stats-panel-close" class="crossfade three-reverse" src="assets/icon-close.svg">
-            <img id="stats-panel-open" class="crossfade two-reverse" src="assets/icon-about.svg" tip="Click for more stats" currentitem="false">
-          </div>
+        </div>
+
+        <div class="main-text">
+          <span class="normal-text">
+        <span>Open sourced by the team at</span>
+          <a href="https://discordapp.com">Discord</a>
+          <span>. Tinkered with <span class="love">love</span> by Shywim.</span>
+          <br>
+          <span>Contribute yourself on</span>
+          <a href="https://github.com/shywim/airhornbot">Github ➔</a>
+          </span>
+        </div>
+
+        <div class="social">
+          <a id="share-fb"><img src="assets/icon-facebook.svg"></a>
+          <a id="share-twitter"><img src="assets/icon-twitter.svg"></a>
         </div>
       </div>
-
-      <div class="main-text">
-        <span class="normal-text">
-        <span>Open sourced by the team at</span>
-        <a href="https://discordapp.com">Discord</a>
-        <span>. Tinkered with <span class="love">love</span> by Shywim.</span>
-        <br>
-        <span>Contribute yourself on</span>
-        <a href="https://github.com/shywim/airhornbot">Github ➔</a>
-        </span>
-      </div>
-
-      <div class="social">
-        <a id="share-fb"><img src="assets/icon-facebook.svg"></a>
-        <a id="share-twitter"><img src="assets/icon-twitter.svg"></a>
-      </div>
-
     </div>
 
   </div>
