modified open graph tags

--- a/web-app/public/index.html
+++ b/web-app/public/index.html
@@ -9,17 +9,17 @@
   <meta property="site_name" content="Airhorn" />
   <meta property="locale" content="en_US" />
 
-  <meta property="og:type" content="article" />
+  <meta property="og:type" content="website" />
   <meta property="og:url" content="https://airhorn.shywim.fr" />
   <meta property="og:title" content="!airhorn" />
   <meta property="og:description" content="A Discord bot with live statistics that makes airhorn sounds BEEP BOOP." />
-  <meta property="og:image" content="assets/og-facebook.png" />
+  <meta property="og:image" content="https://airhorn.shywim.fr/assets/og-facebook.png" />
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@shywim" />
   <meta name="twitter:title" content="!airhorn" />
   <meta name="twitter:description" content="BEEP BOOP. Airhorn bot makes airhorn noises in Discord. BEEP BOOP." />
-  <meta property="twitter:image" content="assets/og-twitter.png" />
+  <meta property="twitter:image" content="https://airhorn.shywim.fr/assets/og-twitter.png" />
 
   <title>!airhorn</title>
 
