--- a/web-app/public/index.html
+++ b/web-app/public/index.html
@@ -61,9 +61,9 @@
             <h1 class="title is-2">Manage my !airhorn</h1>
           </div>
         </div>
-        <div class="level-right"> 
+        <div class="level-right">
           <div class="level-item">
-            <a id="back-home">Back</a>
+            <a class="back-home" id="back-home">Back</a>
           </div>
         </div>
       </div>
