--- a/web-app/public/index.html
+++ b/web-app/public/index.html
@@ -28,6 +28,11 @@
 </head>
 
 <body>
+  <div class="circle-container">
+    <div class="circle-reveal">
+    </div>
+  </div>
+
   <div class="section main-section" id="main-section">
     <div class="content">
       <div class="heading">
@@ -73,7 +78,7 @@
       </div>
 
       <h2 class="title is-3">Guilds with !airhorn</h2>
-      <table id="airhorn-guilds" class="table">
+      <table id="airhorn-guilds" class="table guild-list">
         <thead>
           <tr>
             <th></th>
@@ -87,7 +92,7 @@
       </table>
 
       <h2 class="title is-3">Boring guilds</h2>
-      <table id="boring-guilds" class="table">
+      <table id="boring-guilds" class="table guild-list">
         <thead>
           <tr>
             <th></th>
@@ -230,7 +235,7 @@
     <iframe name="voidling"></iframe>
   </div>
 
-  <script type="text/javascript" src="js/main.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
 
 </body>
 
